LMB and RMB seems reversed for manipulators compared to 2.79 and older. #51945

Closed
opened 2017-07-01 07:43:32 +02:00 by Andrei Nadin · 7 comments

System Information
MacOS 10.12.6, NVIDIA GeForce GTX 680MX 2048 MB

Blender Version
blender-2.80.0-git20170701.3de5370e9df-x86_64
Worked: 2.79 and lower

All the new manipulators e.g. translate seem to have their mouse button interaction reversed

Exact steps for others to reproduce the error
Load up default scene and change Select With (in Input Settings) to LMB.

With this set to LMB, RMB actual selects individual axis etc.

Swap this setting to RMB and then LMB selects individual axis.

**System Information** MacOS 10.12.6, NVIDIA GeForce GTX 680MX 2048 MB **Blender Version** blender-2.80.0-git20170701.3de5370e9df-x86_64 Worked: 2.79 and lower All the new manipulators e.g. translate seem to have their mouse button interaction reversed **Exact steps for others to reproduce the error** Load up default scene and change Select With (in Input Settings) to LMB. With this set to LMB, RMB actual selects individual axis etc. Swap this setting to RMB and then LMB selects individual axis.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AnadinX

Added subscriber: @AnadinX

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2017-07-03 21:32:34 +02:00

Not sure we do accept reports about that area of code yet, @ideasman42 should know more about that anyway. :)

Not sure we do accept reports about that area of code yet, @ideasman42 should know more about that anyway. :)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

For manipulator we wan't to bypass this preference, setting to LMB always.

For manipulator we wan't to bypass this preference, setting to LMB always.

This issue was referenced by 25dba156be

This issue was referenced by 25dba156bec73cf05c87a59bbf28b401049643bb
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51945
No description provided.