Fix T51945: LMB select swaps manipulator buttons